# d365-odata-mcp

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
src/auth/: mod.rs
src/config/: config.rs
src/odata/: client.rs
