[package]
name = "d365-odata-mcp"
version = "0.4.2"
edition = "2021"
description = "MCP Server for Microsoft Dynamics 365 OData API (Dataverse & Finance/Operations)"
license = "MIT"
repository = "https://github.com/FlintsLabs/d365-odata-mcp"
homepage = "https://github.com/FlintsLabs/d365-odata-mcp"
documentation = "https://github.com/FlintsLabs/d365-odata-mcp#readme"
readme = "README.md"
keywords = ["mcp", "dynamics365", "odata", "dataverse", "d365"]
categories = ["api-bindings", "command-line-utilities"]
authors = ["Pichason <pichason@example.com>"]
rust-version = "1.75.0"

[[bin]]
name = "d365-odata-mcp"
path = "src/main.rs"

[lib]
name = "d365_odata_mcp"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "io-std"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
